Fixed scroll bar color in dark mode

--- a/client/src/common/screen.scss
+++ b/client/src/common/screen.scss
@@ -1,5 +1,9 @@
 @use 'sass:list';
 
+html {
+    color-scheme: light dark;
+}
+
 body {
     font-family: 'Akzidenz Grotesk', 'Helvetica Neue', sans-serif;
     font-size: 18px;
